tambah head di uts

--- a/5210411135/uts.ipynb
+++ b/5210411135/uts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,19 +19,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Gender   Age  AnnualSalary Purchased\n",
-      "0   Male  35.0       20000.0        No\n",
-      "1   Male  40.0       43500.0        No\n",
-      "2   Male  49.0       74000.0        No\n",
-      "3   Male  40.0      107500.0       Yes\n",
-      "4   Male  25.0       79000.0        No\n",
+      "   Gender   Age  AnnualSalary Purchased\n",
+      "0    Male  35.0       20000.0        No\n",
+      "1    Male  40.0       43500.0        No\n",
+      "2    Male  49.0       74000.0        No\n",
+      "3    Male  40.0      107500.0       Yes\n",
+      "4    Male  25.0       79000.0        No\n",
+      "5  Female  47.0       33500.0       Yes\n",
+      "6     NaN  46.0      132500.0       Yes\n",
+      "7    Male  42.0           NaN        No\n",
+      "8  Female  30.0       84500.0        No\n",
+      "9    Male   NaN       52000.0        No\n",
       "Gender          2\n",
       "Age             2\n",
       "AnnualSalary    2\n",
@@ -41,8 +46,8 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(\"C:/Users/Asus Vivobook/Documents/Widi's Python Env/Machine-Learning/5210411135/data\\data-uts.csv\", sep=';')\n",
-    "print(data.head())\n",
+    "data = pd.read_csv(\"D:\\WidiPythonEnv\\Machine-Learning/5210411135\\data\\data-uts.csv\", sep=';')\n",
+    "print(data.head(10))\n",
     "print(data.isna().sum())"
    ]
   },
