--- a/5210411135/pert11.ipynb
+++ b/5210411135/pert11.ipynb
@@ -4,14 +4,27 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'plotly.figure'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpydotplus\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[39m# visualisasi data\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mplotly\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfigure\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mff\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'plotly.figure'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeClassifier, export_graphviz\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics\n",
     "from six import StringIO\n",
-    "import pydotplus"
+    "import pydotplus\n",
+    "# visualisasi data"
    ]
   },
   {
