--- a/5210411135/pert12.ipynb
+++ b/5210411135/pert12.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pertemuan 12\n",
+    "- **5210411135** - I Gede Widiantara"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 83,
    "metadata": {},
