--- a/5210411135/pert12.ipynb
+++ b/5210411135/pert12.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -238,19 +238,19 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('D:\\Code\\python_code\\Machine-Learning/5210411135\\data\\waterQuality1.csv')\n",
+    "data = pd.read_csv('D:\\Code\\py_code\\Machine-Learning/5210411135\\data\\waterQuality1.csv')\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -284,17 +284,18 @@
       " 19  uranium      7999 non-null   float64\n",
       " 20  is_safe      7999 non-null   object \n",
       "dtypes: float64(19), object(2)\n",
-      "memory usage: 1.3+ MB\n"
+      "memory usage: 1.3+ MB\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "data.info()"
+    "print(data.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +325,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +422,7 @@
        "       [ 18, 181]], dtype=int64)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1527,7 +1528,7 @@
        "weighted avg   0.865637  0.866667  0.865983  300.000000"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1604,7 @@
        "Naive Bayes Classifier  0.909548  0.900498  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1642,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1652,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1715,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
