+ test publick repo

--- a/5210411135/uas.ipynb
+++ b/5210411135/uas.ipynb
@@ -4216,7 +4216,7 @@
     "\n",
     "\n",
     "#### *Referensi*\n",
-    "- Dokumentasi Scikit-learn : https://scikit-learn.org/stable/modules/classes.html\n",
+    "- Dokumentasi scikit-learn : https://scikit-learn.org/stable/modules/classes.html\n",
     "- Lainnya :\n",
     "  - https://colab.research.google.com/drive/1D9zVTdMlH78DEAboLjkY1aXNctA-p4ZL#scrollTo=CIs2z-AAjyaL"
    ]
